--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
 </head>
 <body>
+    <h1>If your seeing this text you have Javascript disabled in your browser and need to go to settings and enable it to play the game</h1>
 
     <script>
 	    
