--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Monster Wars</title>
+    <title>| Monster Wars |</title>
     <link rel="icon" type="image/x-icon" href="https://i.ibb.co/kKzm07w/Mushroom-Potion3.png">
     <style>
      html, body {
