--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@ function update() {
 			gameState.muncher7.y = 0 - window.innerHeight / 10
 		}
 		if (counter > 1000 && muncherHealth1 <= 0 && muncherHealth2 <= 0 && muncherHealth3 <= 0 && muncherHealth4 <= 0 && muncherHealth5 <= 0 && muncherHealth6 <= 0 && muncherHealth7 <= 0){
-			round = 5
+			round = 3 //last change here
 			counter = 0
 			console.clear()
 			console.log('round ' + round)
