--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
 	    
 	    //The preload
 	    function preload() {
+
+  //Loading the jams
+  game.load.audio('backgroundMusic', 'Monster-Wars-Metal.wav');
   
   //The images being loaded
   this.load.image(
