--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script>
 	    
 	    //Some variables being set
+	    let music
 	    let fuel = 200
 	    let health = 200
 	    let fuelCharge = 100
