--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
      }
     </style>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser.min.js"></script>
 </head>
 <body>
     <script>
@@ -74,7 +73,7 @@
 	    function preload() {
 
   //Loading the jams
-  game.load.audio('backgroundMusic', 'Monster-Wars-Metal.wav');
+  this.load.audio('backgroundMusic', 'Monster-Wars-Metal.wav');
   
   //The images being loaded
   this.load.image(
