--- a/index.html
+++ b/index.html
@@ -703,6 +703,7 @@ function update() {
 	 //Checks if the player lost all it's health
 	 if (health <= 0){
 		 gameOn = 0
+		 music.stop();
 		 alert("You made it to round " + roundsLived)
 		 this.scene.restart(this, {}, 'previous')
 	 }
@@ -745,6 +746,7 @@ function update() {
 		//this.cameras.main.shake(1000, .01, false, function(camera, progress) {this.scene.restart(this, {}, 'previous')})
 		this.cameras.main.fade(200, 0, 0, 0, false, function(camera, progress) {if(progress > .9){
 			gameOn = 0
+			music.stop();
 			alert("You made it to round " + roundsLived)
 			this.scene.restart(this, {}, 'previous')
 		}})
